--- a/src/main/resources/templates/member/member-detail-management.html
+++ b/src/main/resources/templates/member/member-detail-management.html
@@ -13,6 +13,9 @@
 <div class="content-area">
     <h2>직원상세</h2>
     <hr>
+    <div style="text-align: right;">
+        <a href="/member">목록</a>
+    </div>
     <div class="input-group mb-3">
         <select name="department" class="form-select" aria-label="Default select example">
             <option th:each="department : ${departmentList}"
@@ -28,7 +31,8 @@
     </div>
     <div class="input-group mb-3">
         <span style="width : 100px;" class="input-group-text" id="basic-addon2">비밀번호</span>
-        <input th:text="${memberInfo.password}" name="password" type="text" class="form-control" placeholder="" aria-label="function-name"
+        <input th:value="${memberInfo.password}" name="password" type="text" class="form-control" placeholder=""
+               aria-label="function-name"
                aria-describedby="basic-addon2">
     </div>
     <div class="input-group mb-3">
@@ -53,34 +57,34 @@
         <button onclick="updateMemberInfo()" class="btn btn-primary" type="button">저장</button>
         <input type="hidden" th:value="${memberInfo.id}" name="id">
         <script>
-            const updateMemberInfo =()=>{
-                const id            = $('input[name="id"]').val();
-                const departmentId    = $('select[name="department"]').val();
-                const name          = $('input[name="name"]').val();
-                const password      = $('input[name="password"]').val();
-                const email         = $('input[name="email"]').val();
-                const birth         = $('input[name="birth"]').val();
-                const state         = $('select[name="state"]').val();
-                const params        = {
-                    id              : id,
-                    departmentId    : departmentId,
-                    name            : name,
-                    password        : password,
-                    email           : email,
-                    birth           : birth,
-                    state           : state
+            const updateMemberInfo = () => {
+                const id = $('input[name="id"]').val();
+                const departmentId = $('select[name="department"]').val();
+                const name = $('input[name="name"]').val();
+                const password = $('input[name="password"]').val();
+                const email = $('input[name="email"]').val();
+                const birth = $('input[name="birth"]').val();
+                const state = $('select[name="state"]').val();
+                const params = {
+                    id: id,
+                    departmentId: departmentId,
+                    name: name,
+                    password: password,
+                    email: email,
+                    birth: birth,
+                    state: state
                 }
                 $.ajax({
-                    type : 'post',
-                    url : '/api/member/update',
-                    contentType : 'application/json',
-                    data : JSON.stringify(params),
-                    dataType : 'json',
-                    success : function(result){
+                    type: 'post',
+                    url: '/api/member/update',
+                    contentType: 'application/json',
+                    data: JSON.stringify(params),
+                    dataType: 'json',
+                    success: function (result) {
                         console.log(result);
                         alert('수정완료');
                     },
-                    error : (err)=>console.log(err)
+                    error: (err) => console.log(err)
                 })
             }
         </script>
