--- a/src/main/resources/templates/main-dashboard.html
+++ b/src/main/resources/templates/main-dashboard.html
@@ -11,7 +11,7 @@
 <th:block th:replace="common/fragments/header-fragment" :: headerFragment></th:block>
 
 <div class="content-area">
- dashboard
+<!-- dashboard-->
 </div>
 </body>
 </html>
