--- a/src/main/resources/templates/common/fragments/left-navbar.html
+++ b/src/main/resources/templates/common/fragments/left-navbar.html
@@ -33,9 +33,9 @@ th:fragment="LeftNavbarFragment">
 </style>
 <body>
   <nav class="sidebar">
-    <h1>한국총괄포탈</h1>
+    <h1>SCM-PROJECT</h1>
     <div class="menu list-group"
-         style="padding-top: 30px; max-height : 500px; overflow: auto;">
+         style="padding-top: 30px; min-height : 500px; overflow: auto;">
       <button th:each="menu : ${sidebar}" th:onclick="|location.href='@{${menu.link}}'|" class="list-group-item list-group-item-action" th:text="${menu.menuTitle}"></button>
     </div>
   </nav>
