--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -45,11 +45,11 @@
         <h3>감성전자</h3>
     </div>
     <div class="form-floating mb-3">
-        <input name="userId" type="text" class="form-control" id="floationgInputUserId" placeholder="아이디를 입력해주세요">
+        <input value="100000" name="userId" type="text" class="form-control" id="floationgInputUserId" placeholder="아이디를 입력해주세요">
         <label for="floationgInputUserId">아이디를 입력하세요</label>
     </div>
     <div class="form-floating mb-3">
-        <input name="password" type="text" class="form-control" id="floationgInputPassword" placeholder="비밀번호를 입력해주세요">
+        <input value="1234" name="password" type="text" class="form-control" id="floationgInputPassword" placeholder="비밀번호를 입력해주세요">
         <label for="floationgInputPassword">비밀번호를 입력하세요</label>
     </div>
     <div style="text-align : center; padding-top : 20px;">
